--- a/layouts/partials/home/partners.html
+++ b/layouts/partials/home/partners.html
@@ -3,11 +3,75 @@
     <h2 class="mb-3">Our Community</h2>
     <p>O3DE is built by the community in conjunction with dedicated members, including the following organizations.</p>
     <div class="row align-items-center justify-content-center partners-logos-view">
-      <img src="/img/logos/partnerLogos/adobe.svg" class="adobe-logo">
-      <img src="/img/logos/partnerLogos/aws.svg" class="aws-logo">
-      <img src="/img/logos/partnerLogos/huawei.svg" class="huawei-logo">
-      <img src="/img/logos/partnerLogos/intel.svg" class="intel-logo">
-      <img src="/img/logos/partnerLogos/niantic.png" class="niantic-logo">
+
+      <div id="carouselPartnersIndicators" class="carousel slide partner-carousel" data-ride="carousel" data-interval="false">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <div class="partner-denomination">Premier Partners</div>
+            <img src="/img/logos/partnerLogos/adobe.svg" class="adobe-logo">
+            <img src="/img/logos/partnerLogos/aws.svg" class="aws-logo">
+            <img src="/img/logos/partnerLogos/huawei.svg" class="huawei-logo">
+            <div class="partner-separator"></div>
+            <img src="/img/logos/partnerLogos/intel.svg" class="intel-logo">
+            <img src="/img/logos/partnerLogos/niantic.svg" class="niantic-logo">
+          </div>
+          <div class="carousel-item">
+            <div class="partner-denomination">General Partners</div>
+            <img src="/img/logos/partnerLogos/accelbyte.svg" class="accelbyte-logo">
+            <img src="/img/logos/partnerLogos/apocalypse-studios.svg" class="apocalypse-studios-logo">
+            <img src="/img/logos/partnerLogos/audiokinetic.svg" class="audiokinetic-logo">
+            <div class="partner-separator"></div>
+            <img src="/img/logos/partnerLogos/backtrace.svg" class="backtrace-logo">
+            <img src="/img/logos/partnerLogos/carbonated.svg" class="carbonated-logo">
+            <img src="/img/logos/partnerLogos/futurewei.svg" class="futurewei-logo">
+            <img src="/img/logos/partnerLogos/gamepoch.svg" class="gamepoch-logo">
+          </div>
+          <div class="carousel-item">
+            <div class="partner-denomination">General Partners</div>
+            <img src="/img/logos/partnerLogos/genvid.svg" class="genvid-logo">
+            <img src="/img/logos/partnerLogos/hadean.svg" class="hadean-logo">
+            <img src="/img/logos/partnerLogos/here.svg" class="here-logo">
+            <div class="partner-separator"></div>
+            <img src="/img/logos/partnerLogos/kitbash3D.svg" class="kitbash3D-logo">
+            <img src="/img/logos/partnerLogos/kythera-ai.svg" class="kytehra-ai-logo">
+            <img src="/img/logos/partnerLogos/popcorn-fx.svg" class="popcorn-fx-logo">
+            <img src="/img/logos/partnerLogos/red-hat.svg" class="red-hat-logo">
+          </div>
+          <div class="carousel-item">
+            <div class="partner-denomination">General Partners</div>
+            <img src="/img/logos/partnerLogos/side-fx.svg" class="side-fx-logo">
+            <img src="/img/logos/partnerLogos/tafi.svg" class="tafi-logo">
+            <img src="/img/logos/partnerLogos/tlm-partners.svg" class="tlm-partners-logo">
+            <div class="partner-denomination">Associate Partners</div>
+            <img src="/img/logos/partnerLogos/igda.svg" class="igda-logo">
+            <img src="/img/logos/partnerLogos/open-robotics.svg" class="open-robotics-logo">
+            <img src="/img/logos/partnerLogos/rit.svg" class="rit-logo">
+          </div>
+        </div>
+        <div class="d-flex justify-content-center align-items-center">
+          <a href="#carouselPartnersIndicators" data-slide="prev" class="btn">
+            <i class="fas fa-chevron-left"></i>
+          </a>
+          <div class="carousel-indicators mr-0 ml-0" style="position: relative">
+            <a data-target="#carouselPartnersIndicators" data-slide-to="0" class="active btn carousel-btn">
+              <i class="fas fa-circle"></i>
+            </a>
+            <a data-target="#carouselPartnersIndicators" data-slide-to="1" class="btn carousel-btn">
+              <i class="fas fa-circle"></i>
+            </a>
+            <a data-target="#carouselPartnersIndicators" data-slide-to="2" class="btn carousel-btn">
+              <i class="fas fa-circle"></i>
+            </a>
+            <a data-target="#carouselPartnersIndicators" data-slide-to="3" class="btn carousel-btn">
+              <i class="fas fa-circle"></i>
+            </a>
+          </div>
+          <a href="#carouselPartnersIndicators" data-slide="next" class="btn">
+            <i class="fas fa-chevron-right"></i>
+          </a>
+        </div>
+      </div>
+
     </div>
   </div>
 </section>
