--- a/layouts/docs/section.html
+++ b/layouts/docs/section.html
@@ -1,22 +1,29 @@
 {{ define "main" }}
+<div class="docs-layout">
   <div class="container-fluid">
-      <section class="row flex-xl-nowrap">
-        <section class="col d-none d-md-block col-xl-5 docs-sidebar p-0">
-          {{ partial "section-nav.html" . }}
-        </section>
-        <section class="col docs-content pt-3 px-5 pb-3">
-          <div class="row flex">
-            <div class="col  order-1 col-12 order-xl-1">
-            {{ partial "single-header.html" . }}
-            </div>
-            <div class="col order-3 order-xl-2">
-              <h1 class="title">{{ .Page.Title | markdownify }}</h1>
-              {{ partial "docs/content.html" . }}     
-            </div>
-            <div class="col col-12 order-2 col-xl-2 pt-5 order-xl-3">
-              {{ partial "docs/docs-nav.html" . }}
-            </div>
-        </section>
+    <section class="row flex">
+      <section class="col-12 col-md-12 col-xl-2 docs-sidebar p-0 order-2 order-xl-1">
+        {{ partial "section-nav.html" . }}
       </section>
-    </div>
+      <section class="col-12 col-md-12 col-xl-10 docs-content pt-3 px-5 pb-3 order-1 order-xl-2">
+        <div class="row">
+          <div class="col-12 col-md-12 col-xl-12 order-1 order-xl-1">
+          {{ partial "single-header.html" . }}
+          </div>
+          <div class="col-12 col-md-12 col-xl-10 order-3 order-xl-2">
+            <h1 class="title">{{ .Page.Title | markdownify }}</h1>
+            {{ partial "docs/content.html" . }}  
+            <hr class="mt-5" />   
+            {{ partial "footer-content.html" . }}
+          </div>
+            {{ if eq ($.Param "toc") true }}
+              <div class="col-12 col-xl-2 pt-5 order-2 order-xl-3">
+                {{ partial "docs/docs-nav.html" . }}
+              </div>
+          {{ end }}
+        </div>
+      </section>
+    </section>
+  </div>
+</div>
 {{ end }}
