Changed partner logos from images to divs with background to allow for better customization without manually chaning the size of the canvas in the svg. resized the logo appropriately and verified it works on mobile.
Signed-off-by: Danilo Aimini <82231674+AMZN-daimini@users.noreply.github.com>

--- a/assets/sass/custom.sass
+++ b/assets/sass/custom.sass
@@ -471,34 +471,109 @@ $width: '59vw';
 
 .partners-logos-view
   padding: 16px 0
-  @include media-breakpoint-down(md)
-    max-width: 360px
 
-  img
-    margin: 0 12px
+  .partner-logo
+    margin: 0 16px
     padding: 8px 0
     height: 90px
-    width: auto
+    width: 180px
+    background-size: contain
+    background-repeat: no-repeat
+    background-position: 50% 50%
+    display: inline-block
+    position: relative
+
     @include media-breakpoint-down(xs)
-      width: 100%
+      display: block
+      margin: 0 auto !important
+
+  .adobe-logo
+    background-image: url('/img/logos/partnerLogos/adobe.svg')
+    width: 200px
 
   .aws-logo
-    padding: 12px 4px 4px 0
+    background-image: url('/img/logos/partnerLogos/aws.svg')
+    width: 96px
+    margin-right: 24px
+
+  .huawei-logo
+    background-image: url('/img/logos/partnerLogos/huawei.svg')
 
   .intel-logo
-    height: 78px
-    padding: 14px 0
+    background-image: url('/img/logos/partnerLogos/intel.svg')
+    width: 110px
   
   .niantic-logo
-    height: 96px;
-    padding: 5px 0
+    background-image: url('/img/logos/partnerLogos/niantic.svg')
+    width: 140px
 
-  .huawei-logo
-    height: 70px;
-  
-  .huawei-logo
-    height: 70px;
 
+  .accelbyte-logo
+    background-image: url('/img/logos/partnerLogos/accelbyte.svg')
+
+  .apocalypse-studios-logo
+    background-image: url('/img/logos/partnerLogos/apocalypse-studios.svg')
+
+  .audiokinetic-logo
+    background-image: url('/img/logos/partnerLogos/audiokinetic.svg')
+
+  .backtrace-logo
+    background-image: url('/img/logos/partnerLogos/backtrace.svg')
+
+  .carbonated-logo
+    background-image: url('/img/logos/partnerLogos/carbonated.svg')
+    width: 96px
+
+  .futurewei-logo
+    background-image: url('/img/logos/partnerLogos/futurewei.svg')
+
+  .gamepoch-logo
+    background-image: url('/img/logos/partnerLogos/gamepoch.svg')
+    
+  .genvid-logo
+    background-image: url('/img/logos/partnerLogos/genvid.svg')
+
+  .hadean-logo
+    background-image: url('/img/logos/partnerLogos/hadean.svg')
+
+  .here-logo
+    background-image: url('/img/logos/partnerLogos/here.svg')
+
+  .kitbash3D-logo
+    background-image: url('/img/logos/partnerLogos/kitbash3D.svg')
+
+  .kythera-ai-logo
+    background-image: url('/img/logos/partnerLogos/kythera-ai.svg')
+
+  .popcorn-fx-logo
+    background-image: url('/img/logos/partnerLogos/popcorn-fx.svg')
+    width: 128px
+
+  .red-hat-logo
+    background-image: url('/img/logos/partnerLogos/red-hat.svg')
+
+  .side-fx-logo
+    background-image: url('/img/logos/partnerLogos/side-fx.svg')
+
+  .tafi-logo
+    background-image: url('/img/logos/partnerLogos/tafi.svg')
+    width: 96px
+    margin-right: 32px
+
+  .tlm-partners-logo
+    background-image: url('/img/logos/partnerLogos/tlm-partners.svg')
+    width: 96px
+
+  .igda-logo
+    background-image: url('/img/logos/partnerLogos/igda.svg')
+    width: 120px
+
+  .open-robotics-logo
+    background-image: url('/img/logos/partnerLogos/open-robotics.svg')
+
+  .rit-logo
+    background-image: url('/img/logos/partnerLogos/rit.svg')
+    width: 96px
 
 // layouts/partials/home/partners.html carousel
 
@@ -517,6 +592,16 @@ $width: '59vw';
     max-width: 1080px
     height: 220px
     text-align: center;
+    
+    @include media-breakpoint-down(lg)
+      height: 320px
+    
+    @include media-breakpoint-down(sm)
+      height: 420px
+    
+    @include media-breakpoint-down(xs)
+      height: 650px
+
   
   .partner-denomination
     font-weight: 600
