--- a/layouts/partials/home/partners.html
+++ b/layouts/partials/home/partners.html
@@ -4,48 +4,48 @@
     <p>O3DE is built by the community in conjunction with dedicated members, including the following organizations.</p>
     <div class="row align-items-center justify-content-center partners-logos-view">
 
-      <div id="carouselPartnersIndicators" class="carousel slide partner-carousel" data-ride="carousel" data-interval="false">
+      <div id="carouselPartnersIndicators" class="carousel slide partner-carousel" data-ride="carousel" data-interval="8000">
         <div class="carousel-inner">
           <div class="carousel-item active">
             <div class="partner-denomination">Premier Partners</div>
-            <img src="/img/logos/partnerLogos/adobe.svg" class="adobe-logo">
-            <img src="/img/logos/partnerLogos/aws.svg" class="aws-logo">
-            <img src="/img/logos/partnerLogos/huawei.svg" class="huawei-logo">
+            <div class="partner-logo adobe-logo"></div>
+            <div class="partner-logo aws-logo"></div>
+            <div class="partner-logo huawei-logo"></div>
             <div class="partner-separator"></div>
-            <img src="/img/logos/partnerLogos/intel.svg" class="intel-logo">
-            <img src="/img/logos/partnerLogos/niantic.svg" class="niantic-logo">
+            <div class="partner-logo intel-logo"></div>
+            <div class="partner-logo niantic-logo"></div>
           </div>
           <div class="carousel-item">
             <div class="partner-denomination">General Partners</div>
-            <img src="/img/logos/partnerLogos/accelbyte.svg" class="accelbyte-logo">
-            <img src="/img/logos/partnerLogos/apocalypse-studios.svg" class="apocalypse-studios-logo">
-            <img src="/img/logos/partnerLogos/audiokinetic.svg" class="audiokinetic-logo">
+            <div class="partner-logo accelbyte-logo"></div>
+            <div class="partner-logo apocalypse-studios-logo"></div>
+            <div class="partner-logo audiokinetic-logo"></div>
             <div class="partner-separator"></div>
-            <img src="/img/logos/partnerLogos/backtrace.svg" class="backtrace-logo">
-            <img src="/img/logos/partnerLogos/carbonated.svg" class="carbonated-logo">
-            <img src="/img/logos/partnerLogos/futurewei.svg" class="futurewei-logo">
-            <img src="/img/logos/partnerLogos/gamepoch.svg" class="gamepoch-logo">
+            <div class="partner-logo backtrace-logo"></div>
+            <div class="partner-logo carbonated-logo"></div>
+            <div class="partner-logo futurewei-logo"></div>
+            <div class="partner-logo gamepoch-logo"></div>
           </div>
           <div class="carousel-item">
             <div class="partner-denomination">General Partners</div>
-            <img src="/img/logos/partnerLogos/genvid.svg" class="genvid-logo">
-            <img src="/img/logos/partnerLogos/hadean.svg" class="hadean-logo">
-            <img src="/img/logos/partnerLogos/here.svg" class="here-logo">
+            <div class="partner-logo genvid-logo"></div>
+            <div class="partner-logo hadean-logo"></div>
+            <div class="partner-logo here-logo"></div>
             <div class="partner-separator"></div>
-            <img src="/img/logos/partnerLogos/kitbash3D.svg" class="kitbash3D-logo">
-            <img src="/img/logos/partnerLogos/kythera-ai.svg" class="kytehra-ai-logo">
-            <img src="/img/logos/partnerLogos/popcorn-fx.svg" class="popcorn-fx-logo">
-            <img src="/img/logos/partnerLogos/red-hat.svg" class="red-hat-logo">
+            <div class="partner-logo kitbash3D-logo"></div>
+            <div class="partner-logo kythera-ai-logo"></div>
+            <div class="partner-logo popcorn-fx-logo"></div>
+            <div class="partner-logo red-hat-logo"></div>
           </div>
           <div class="carousel-item">
             <div class="partner-denomination">General Partners</div>
-            <img src="/img/logos/partnerLogos/side-fx.svg" class="side-fx-logo">
-            <img src="/img/logos/partnerLogos/tafi.svg" class="tafi-logo">
-            <img src="/img/logos/partnerLogos/tlm-partners.svg" class="tlm-partners-logo">
+            <div class="partner-logo side-fx-logo"></div>
+            <div class="partner-logo tafi-logo"></div>
+            <div class="partner-logo tlm-partners-logo"></div>
             <div class="partner-denomination">Associate Partners</div>
-            <img src="/img/logos/partnerLogos/igda.svg" class="igda-logo">
-            <img src="/img/logos/partnerLogos/open-robotics.svg" class="open-robotics-logo">
-            <img src="/img/logos/partnerLogos/rit.svg" class="rit-logo">
+            <div class="partner-logo igda-logo"></div>
+            <div class="partner-logo open-robotics-logo"></div>
+            <div class="partner-logo rit-logo"></div>
           </div>
         </div>
         <div class="d-flex justify-content-center align-items-center">
