--- a/layouts/docs/single.html
+++ b/layouts/docs/single.html
@@ -2,7 +2,7 @@
 <div class="docs-layout">
   <div class="container-fluid">
     <section class="row flex">
-      <section class="col-12 col-md-12 col-xl-2 docs-sidebar p-0 order-2 order-xl-1">
+      <section class="col-12 col-md-12 col-xl-2 docs-sidebar order-2 order-xl-1">
         {{ partial "section-nav.html" . }}
       </section>
       <section class="col-12 col-md-12 col-xl-10 docs-content pt-3 px-5 pb-3 order-1 order-xl-2">
@@ -10,7 +10,7 @@
           <div class="col-12 col-md-12 col-xl-12 order-1 order-xl-1">
           {{ partial "single-header.html" . }}
           </div>
-          <div class="col-12 col-md-12 col-xl-10 order-3 order-xl-2">
+          <div class="col order-3 order-xl-2">
             <h1 class="title">{{ .Page.Title | markdownify }}</h1>
             {{ partial "docs/content.html" . }}  
             <hr class="mt-5" />   
