--- a/layouts/partials/docs/docs-nav.html
+++ b/layouts/partials/docs/docs-nav.html
@@ -1,7 +1,7 @@
 {{ $hastoc := .Params.toc }}
 {{ $toc := .TableOfContents }}
 
-{{ if ($hastoc) }}
-<p> On this page:</p>
+<div class="docs-right-toc">
+  <p>IN THIS ARTICLE:</p>
   {{ $toc }}
-{{ end }}
+</div>
