Various fixes - TOCs styling - Fix secondary docs menu not disappearing on mobile (if already open) - Fix search on docs pages - Fix minor visual discrepancies in secondary docs menu
Signed-off-by: Danilo Aimini <82231674+AMZN-daimini@users.noreply.github.com>

--- a/layouts/docs/section.html
+++ b/layouts/docs/section.html
@@ -16,9 +16,11 @@
             <hr class="mt-5" />   
             {{ partial "footer-content.html" . }}
           </div>
-          <div class="col-12 col-xl-2 pt-5 order-2 order-xl-3">
-            {{ partial "docs/docs-nav.html" . }}
-          </div>
+          {{ if and (ge (len .TableOfContents) 100) (ne .Params.toc "false") }}
+            <div class="col-12 col-xl-2 pt-5 order-2 order-xl-3">
+              {{ partial "docs/docs-nav.html" . }}
+            </div>
+          {{ end }}
         </div>
       </section>
     </section>
