--- a/layouts/partials/docs/docs-nav.html
+++ b/layouts/partials/docs/docs-nav.html
@@ -2,6 +2,6 @@
 {{ $toc := .TableOfContents }}
 
 <div class="docs-right-toc">
-  <p>IN THIS ARTICLE:</p>
+  <p>IN THIS ARTICLE</p>
   {{ $toc }}
 </div>
