--- a/assets/sass/custom.sass
+++ b/assets/sass/custom.sass
@@ -332,6 +332,9 @@ code
   #nav-search
     margin-left: 5px
 
+#search-title
+  margin: 64px 0 32px
+
 
 // layouts/partials/navbar.html secondary
 
@@ -363,6 +366,9 @@ code
   right: 0
   top: 62px
   width: 214px
+  
+  @include media-breakpoint-down(lg)
+    display: none !important
 
   ul
     padding: 0 0.75rem
@@ -376,8 +382,14 @@ code
         text-transform: uppercase
         padding: 0.5rem
 
-      .active div
-        display: none
+      .active
+        color: $o3de-blue-highlight
+
+        div
+          display: none
+      
+      a:hover
+        color: $o3de-lightgray
 
 .mobile-docs-toggler
   .navbar-toggler-icon
@@ -1043,7 +1055,7 @@ body.docs-mobile-menu-open .docs-sidebar
     left: 0
     right: 0
     bottom: 0
-    background: rgba(0, 0, 0, .3)
+    background: rgba(0, 0, 0, .5)
     content: ''
     z-index: 99
     display: none
@@ -1052,6 +1064,15 @@ body.docs-mobile-menu-open .docs-sidebar
 
     &.show
       opacity: 1
+
+.edit-button-container
+  text-align: right
+  @include media-breakpoint-down(sm)
+    text-align: left
+  
+  a.btn
+    @include media-breakpoint-down(lg)
+      transform: scale(.9)
 
 
 // layouts/section-nav.html 
@@ -1168,6 +1189,39 @@ nav.docs-nav
 
 .docs-sidebar
   @include scrollbars(5px, $o3de-blue-highlight, $o3de-lightgray)
+
+  
+// layouts/section-nav.html 
+
+.docs-right-toc
+  p
+    color: #000
+    border-left: 2px solid $o3de-lightgray
+    padding-left: 12px
+    margin: 0
+    font-size: 14px
+    font-weight: 600
+  
+  ul
+    padding: 6px 0 0
+    list-style: none
+    
+    li
+      margin: 0
+      font-size: 14px
+      line-height: 20px
+      padding: 6px 0 6px 12px
+
+      a
+        color: #444
+        font-weight: 500
+        
+      a:hover
+        color: $o3de-blue-highlight
+  
+.docs-right-toc > nav > ul
+  border-left: 2px solid $o3de-lightgray
+
 
 // layouts/partials/footer-content.html
 
