--- a/layouts/partials/single-header.html
+++ b/layouts/partials/single-header.html
@@ -1,8 +1,8 @@
 <div class="row single-header">
-  <div class="col-12 col-md-10">
+  <div class="col-12 col-md-8">
     {{ partial "breadcrumb.html" . }}
   </div>
-  <div class="col-12 col-md-2">
+  <div class="col-12 col-md-4 edit-button-container">
   {{ partial "github-edit.html" . }}
   </div>
 </div>
