--- a/layouts/docs/section.html
+++ b/layouts/docs/section.html
@@ -16,10 +16,10 @@
             <hr class="mt-5" />   
             {{ partial "footer-content.html" . }}
           </div>
-            {{ if eq ($.Param "toc") true }}
-              <div class="col-12 col-xl-2 pt-5 order-2 order-xl-3">
-                {{ partial "docs/docs-nav.html" . }}
-              </div>
+          {{ if and (ge (len .TableOfContents) 100) (ne .Params.toc "false") }}
+            <div class="col-12 col-xl-2 pt-5 order-2 order-xl-3">
+              {{ partial "docs/docs-nav.html" . }}
+            </div>
           {{ end }}
         </div>
       </section>
