Porting changes to home hero from Sindhu's submission. Added a small fix to the copyright positioning.
Signed-off-by: Danilo Aimini <82231674+AMZN-daimini@users.noreply.github.com>

--- a/layouts/partials/home/hero.html
+++ b/layouts/partials/home/hero.html
@@ -1,7 +1,7 @@
 {{ $title := site.Title }}
 {{ $desc  := site.Params.description | markdownify }}
 {{ $source := site.Params.sourceRepo }}
-<div class="scalable home-hero d-flex align-items-center">
+<div class="scalable home-hero d-flex flex-column align-items-center justify-content-around">
   <div class="container hero-inner">
     <div class="row">
       <div class="col col-12 col-md-7 pb-4 pt-4">
@@ -24,4 +24,5 @@
         </div>
       </div>
     </div>
+    <p class="home-hero-copyright">COPYRIGHT &copy APOCALYPSE STUDIOS INC. USED BY O3DE WITH PERMISSION</p>
 </div>
