--- a/assets/sass/custom.sass
+++ b/assets/sass/custom.sass
@@ -483,6 +483,9 @@ $width: '59vw';
   background-position: 50% 50%
   max-height: 20rem
 
+  h1, h4, h5
+    margin: 1.8rem 0 .5rem
+
   @include media-breakpoint-down(md)
     h1
       font-size: 1.8rem
@@ -537,6 +540,29 @@ $width: '59vw';
   background-color: $o3de-blue
   &:hover 
     background-color: darken(#1E71EB, 10%)
+
+.download-os-button
+  color: #000000
+  background-color: #EEEEEE
+  border-radius: 0 
+  padding: 0.5rem 0
+  &:hover
+    color: #000000
+    background-color: #E8E8E8
+
+.download-os.active a.download-os-button
+  color: #000000
+  background-color: #FFFFFF
+  &:hover
+    color: #000000
+    background-color: #F8F8F8
+
+.download-os.active div
+  background-color: #1E70EB
+  padding-bottom: 3px
+
+#download-page-buttons a.disabled
+  background-color: #007bff78
 
 // layouts/partials/home/features.html 
 
