--- a/layouts/download/section.html
+++ b/layouts/download/section.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
 {{ partial "download/hero.html" . }}
 {{ with .Content }}
-<section class="container pt-lg-5">
+<section class="container pt-5">
   <div class="row">
     <div class="col-12 col-lg-5 pr-lg-5">
       {{ partial "download/download.html" . }}
