Minor fixes to the Docs navigation - Left nav menu only shows current category on desktop resolutions. Mobile menu still shows all categories; - Moved Release Notes out of the secondary menu, and Atom Renderer in its place; - Added an extra check to only show redundant pages in navigation if they have content
Signed-off-by: Danilo Aimini <82231674+AMZN-daimini@users.noreply.github.com>

--- a/assets/sass/custom.sass
+++ b/assets/sass/custom.sass
@@ -1092,6 +1092,10 @@ body.docs-mobile-menu-open .docs-sidebar
 
 // layouts/section-nav.html 
 
+nav.docs-nav > ul > li:not(.currentAncestorCategory)
+    @include media-breakpoint-up(xl)
+      display: none
+
 nav.docs-nav
   ul 
     list-style: none
