--- a/layouts/partials/download/getting-started.html
+++ b/layouts/partials/download/getting-started.html
@@ -6,7 +6,7 @@
     <p>Things getting tricky? Check out the community posts and documentation below, or ask a question in <a href="https://github.com/o3de/o3de/discussions" target="_blank">our forums.</a></p>
     <div class="row pt-4 pb-4 mb-4">
       <div class="col col-12 col-md-6 col-lg-3">
-        <a href="https://o3de.org/docs/welcome-guide/setup/requirements/">
+        <a href="https://o3de.org/docs/welcome-guide/requirements/">
           <div class="card mb-3">
             <h4>Prerequisites</h4>
             <p>Read up on the hardware and platform requirements to build and run O3DE.</p>
@@ -15,19 +15,19 @@
         </a>
       </div>
       <div class="col col-12 col-md-6 col-lg-3">
-        <a href="https://o3de.org/docs/welcome-guide/setup/">
+        <a href="https://o3de.org/docs/welcome-guide/setup/setup-from-github/">
           <div class="card mb-3">
             <h4>Setting up O3DE from GitHub</h4>
-            <p>For the Developer Preview, follow these instructions closely. Save youself a few early adopter headaches!</p>
+            <p>For the Developer Preview, follow these instructions closely. Save yourself a few early adopter headaches!</p>
             <div class="learn-more">Learn more</div>
           </div>
         </a>
       </div>
       <div class="col col-12 col-md-6 col-lg-3">
-        <a href="https://o3de.org/docs/welcome-guide/get-started/project-config/creating-projects-using-cli/">
+        <a href="https://o3de.org/docs/welcome-guide/create/creating-projects-using-cli/">
           <div class="card mb-3">
             <h4>Creating a project using the CLI</h4>
-            <p>Learn to create an O3DE project using the command-line.</p>
+            <p>Learn to create an O3DE project using the command line.</p>
             <div class="learn-more">Learn more</div>
           </div>
         </a>
