--- a/assets/sass/custom.sass
+++ b/assets/sass/custom.sass
@@ -137,6 +137,24 @@ $o3de-green: #58BD61
     a
       opacity: 1
 
+  h4
+    font-weight: 600
+    font-size: 18px
+    margin: 26px 0 8px
+
+    @include media-breakpoint-down(sm)
+      font-size: 22px
+      line-height: 32px
+
+  h4
+    a
+      opacity: 0
+      transition: opacity .3s ease
+
+  h4:hover
+    a
+      opacity: 1
+
   p
     font-size: 16px
     line-height: 28px
