--- a/layouts/download/section.html
+++ b/layouts/download/section.html
@@ -1,4 +1,5 @@
 {{ define "main" }}
+{{ partial "top-banner.html" . }}
 {{ partial "download/hero.html" . }}
 {{ with .Content }}
 <section class="container pt-lg-5">
