Make search element id's unique.
Signed-off-by: Jonathan Capes <j.capes@gmail.com>

--- a/layouts/partials/search.html
+++ b/layouts/partials/search.html
@@ -1,8 +1,8 @@
-<form id="search"
+<form id="navbar-search"
     action='{{ with .GetPage "/search" }}{{.Permalink}}{{end}}' method="get" class="d-flex align-items-center justify-content-center pl-2">
     <div class="search-input-view hide-content">
         <label hidden for="search-input">Search site</label>
-        <input type="text" id="search-input" class="form-control form-control-sm" name="query"
+        <input type="text" id="nav-search-input" class="form-control form-control-sm" name="query"
         placeholder="Search site">
     </div> 
 
