--- a/layouts/partials/top-banner.html
+++ b/layouts/partials/top-banner.html
@@ -1,4 +1,4 @@
-<a class="top-banner" href="https://events.linuxfoundation.org/o3decon/" target="_blank">
+<a class="top-banner" href="https://itch.io/jam/o3de-jam-1" target="_blank">
   <div class="container">
     <div class="banner-logo o3dejam"></div>
     <div class="banner-title"><span class="desktop-only">October 18 - November 15</span><span class="mobile-only">O3DEjam: 10/18 - 11/15</span></div>
