--- a/layouts/partials/contribute/sigs.html
+++ b/layouts/partials/contribute/sigs.html
@@ -20,7 +20,7 @@
       SIG-Platform
     </a>
     <a href="https://github.com/o3de/sig-presentation" class="card sig-card">
-      SIG-Presentation
+      SIG-Graphics-Audio
     </a>
     <a href="https://github.com/o3de/sig-release" class="card sig-card">
       SIG-Release
