add card for sig-ops
Signed-off-by: Jonathan Capes <j.capes@gmail.com>

--- a/layouts/partials/contribute/sigs.html
+++ b/layouts/partials/contribute/sigs.html
@@ -16,6 +16,9 @@
     <a href="https://github.com/o3de/sig-network" class="card sig-card">
       SIG-Network
     </a>
+    <a href="https://github.com/o3de/sig-operations" class="card sig-card">
+      SIG-Operations
+    </a>
     <a href="https://github.com/o3de/sig-platform" class="card sig-card">
       SIG-Platform
     </a>
