--- a/layouts/partials/download/getting-started-linux.html
+++ b/layouts/partials/download/getting-started-linux.html
@@ -26,8 +26,8 @@
       <div class="col col-12 col-md-6 col-lg-3">
         <a href="https://o3de.org/docs/welcome-guide/create/creating-projects-using-cli/">
           <div class="card mb-3">
-            <h4>Creating a project using the CLI</h4>
-            <p>Learn to create an O3DE project using the command line.</p>
+            <h4>Install O3DE via Debian Package</h4>
+            <p>Lorem Ipsum Dolor Sit Amet.</p>
             <div class="learn-more">Learn more</div>
           </div>
         </a>
