Support anchors to select the correct view on page load
Signed-off-by: ANT\daimini <daimini@amazon.com>

--- a/layouts/download/section.html
+++ b/layouts/download/section.html
@@ -16,8 +16,8 @@
 </div>
 <div id="os-selector" class="os-selector">
   <div class="os-selector-row">
-    <div id="os-windows" class="os-selector-button active" data-os="windows">Windows</div>
-    <div id="os-linux" class="os-selector-button" data-os="linux">Linux</div>
+    <a id="os-windows" class="os-selector-button active" href="#windows" data-os="windows">Windows</a>
+    <a id="os-linux" class="os-selector-button" href="#linux" data-os="linux">Linux</a>
   </div>
 </div>
 <div id="content-windows" class="os-content active">
