Add YouTube icon to footer and community blocks.
Signed-off-by: Danilo Aimini <82231674+AMZN-daimini@users.noreply.github.com>

--- a/assets/sass/custom.sass
+++ b/assets/sass/custom.sass
@@ -972,6 +972,8 @@ $width: '59vw';
     color: #2A4875
   .fa-twitter
     color: #2AA9E0
+  .fa-youtube
+    color: #ff0000
   a
     color: #1E70EB
 
