--- a/assets/sass/custom.sass
+++ b/assets/sass/custom.sass
@@ -589,6 +589,58 @@ $width: '59vw';
     width: 100%
     margin-top: 0 !important
 
+// Home Slideshow
+
+.hero-block
+  position: relative
+
+.hero-slideshow-background,
+.hero-slideshow
+  position: absolute
+  top: 0
+  left: 0
+  bottom: 0
+  right: 0
+  overflow: hidden
+
+.hero-slideshow
+
+  &::after
+    content: ""
+    position: absolute
+    background: rgba(0,0,0,.6)
+    top: 0
+    left: 0
+    bottom: 0
+    right: 0
+
+  .hero-slideshow-image
+    position: absolute
+    display: block
+    left: 50%
+    top: 50%
+    width: 100%
+    height: 100%
+    background-size: cover
+    background-position: 50% 50%
+    transition: transform 11s linear, opacity 1s ease
+    -webkit-transition: transform 11s linear, opacity 1s ease
+    transform: scale(1) translate(-50%, -50%)
+    -webkit-transform: scale(1) translate(-50%, -50%)
+    opacity: 0
+
+    &.active
+      transform: translate(-50%, -50%) scale(1.25)
+      -webkit-transform: translate(-50%, -50%) scale(1.25)
+      opacity: 1
+
+    &.active.fadeOut
+      transform: translate(-50%, -50%) scale(1.25)
+      -webkit-transform: translate(-50%, -50%) scale(1.25)
+      opacity: 0
+
+.hero-slideshow-foreground
+  color: $o3de-white
 
 // layouts/partial/download/hero.html
 
