--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-{{ partial "home/hero.html" . }}
+{{ partial "home/hero-slideshow.html" . }}
 {{ partial "home/features.html" . }}
 {{ partial "home/partners.html" . }}
 {{ partial "home/get-started.html" . }}
