Refactor Getting Started section in homepage to use carousel and prevent it from getting too long.
Signed-off-by: Danilo Aimini <82231674+AMZN-daimini@users.noreply.github.com>

--- a/layouts/partials/home/partners.html
+++ b/layouts/partials/home/partners.html
@@ -49,7 +49,7 @@
           </div>
         </div>
         <div class="d-flex justify-content-center align-items-center">
-          <a href="#carouselPartnersIndicators" data-slide="prev" class="btn">
+          <a data-target="#carouselPartnersIndicators" data-slide="prev" class="btn">
             <i class="fas fa-chevron-left"></i>
           </a>
           <div class="carousel-indicators mr-0 ml-0" style="position: relative">
@@ -66,7 +66,7 @@
               <i class="fas fa-circle"></i>
             </a>
           </div>
-          <a href="#carouselPartnersIndicators" data-slide="next" class="btn">
+          <a data-target="#carouselPartnersIndicators" data-slide="next" class="btn">
             <i class="fas fa-chevron-right"></i>
           </a>
         </div>
