--- a/layouts/partials/home/hero-slideshow.html
+++ b/layouts/partials/home/hero-slideshow.html
@@ -4,10 +4,13 @@
 <div class="hero-block scalable d-flex flex-column align-items-center justify-content-around">
   <div class="hero-slideshow-background">
     <div id="hero-slideshow" class="hero-slideshow">
-      <div class="hero-slideshow-image" style="background-image: url('images/atom-guide/atom-sample-viewer/cpu-profiler-file-picker.png')"></div>
-      <div class="hero-slideshow-image" style="background-image: url('images/atom-guide/atom-sample-viewer/cpu-profiler-visualizer.png')"></div>
-      <div class="hero-slideshow-image" style="background-image: url('images/tools-ui/component-button-types.png')"></div>
-      <div class="hero-slideshow-image" style="background-image: url('images/user-guide/actor-animation/advanced-rin-locomotion-sample-01.png')"></div>
+      <div class="hero-slideshow-image" style="background-image: url('images/home/slideshow/001.jpg')"></div>
+      <div class="hero-slideshow-image" style="background-image: url('images/home/slideshow/002.jpg')"></div>
+      <div class="hero-slideshow-image" style="background-image: url('images/home/slideshow/003.jpg')"></div>
+      <div class="hero-slideshow-image" style="background-image: url('images/home/slideshow/004.jpg')"></div>
+      <div class="hero-slideshow-image" style="background-image: url('images/home/slideshow/005.jpg')"></div>
+      <div class="hero-slideshow-image" style="background-image: url('images/home/slideshow/006.jpg')"></div>
+      <div class="hero-slideshow-image" style="background-image: url('images/home/slideshow/007.jpg')"></div>
     </div>
   </div>
   <div class="container hero-slideshow-foreground">
@@ -32,5 +35,4 @@
         </div>
       </div>
     </div>
-    <p class="home-hero-copyright">COPYRIGHT &copy APOCALYPSE STUDIOS INC. USED BY O3DE WITH PERMISSION</p>
 </div>
